fix(login): handle all errors (#24)
fix error handler

--- a/frontend/src/assets/locales/fr/index.json
+++ b/frontend/src/assets/locales/fr/index.json
@@ -64,6 +64,7 @@
         },
         "notificationError": {
             "OK": "OK",
+            "SERVOR_ERROR": "Impossible de contacter le serveur",
             "UNEXPECTED_ERROR": "Une erreur est survenue",
             "CONNEXION_ERROR": "Erreur de connexion",
             "INVALID_CREDENTIALS_USER": "Email non reconnu",
