Correction des messages d'erreur

--- a/frontend/src/assets/locales/fr/index.json
+++ b/frontend/src/assets/locales/fr/index.json
@@ -53,14 +53,14 @@
         },
         "postRegistrationInstruction": "Pour finaliser votre demande d'inscription, cliquez sur le lien que nous vous avons envoyé à",
         "inputError": {
-            "EMPTY_ERROR": "Ce champs ne doit pas être vide.",
+            "EMPTY_ERROR": "Ce champ ne doit pas être vide.",
             "INVALID_PHONE_NUMBER_ERROR": "Veuillez entrer un numéro de téléphone valide.",
             "INVALID_FIRSTNAME_ERROR": "Veuillez entrer un prénom valide (lettres uniquement).",
             "INVALID_LASTNAME_ERROR": "Veuillez entrer un nom valide (lettres uniquement).",
-            "INVALID_EMAIL_ERROR": "Ce champs ne doit pas être vide.",
+            "INVALID_EMAIL_ERROR": "Ce champ ne doit pas être vide.",
             "INVALID_PASSWORD_ERROR": "Le mot de passe doit contenir au moins une majuscule, au moins une minuscule, au moins un chiffre et un caractère spécial.",
-            "INVALID_CONFIRMATION_PASSWORD_ERROR": "Ce champs ne doit pas être vide.",
-            "INVALID_LOCATION_ERROR": "Ce champs ne doit pas être vide."
+            "INVALID_CONFIRMATION_PASSWORD_ERROR": "Ce champ ne doit pas être vide.",
+            "INVALID_LOCATION_ERROR": "Ce champ ne doit pas être vide."
         },
         "notificationError": {
             "BAD_REQUEST_ERROR": "Requête invalide",
